--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Commonwealth Bank CSV converter",
   "main": "index.js",
   "bin": {
-    "cba": "./index.js"
+    "cba": "./bin/cba"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,11 @@
   "dependencies": {
     "commander": "^2.9.0",
     "fast-csv": "^2.3.1",
-    "moment": "^2.17.1"
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^17.1.0",
+    "install": "^0.8.7",
+    "moment": "^2.17.1",
+    "nconf": "^0.8.4",
+    "temp": "^0.8.3"
   }
 }
